force-app/main/default/objects/Campaign_Influence__c/fields/Associated_Rep__c.field-meta.xml
<CustomField>
    <fullName>Associated_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Influence</relationshipName>
    <type>Lookup</type>
</CustomField>