force-app/main/default/objects/Campaign_Influence__c/fields/Campaign_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Add_Date__c</fullName>
    <label>Campaign Add Date</label>
    <type>DateTime</type>
</CustomField>