force-app/main/default/objects/Campaign_Influence__c/fields/Campaign_Influence_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Influence_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Influence ID</label>
    <type>Text</type>
</CustomField>