force-app/main/default/objects/Campaign_Influence__c/fields/Campaign_Influence_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Influence_Type__c</fullName>
    <label>Campaign Influence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SR</fullName>
                <default>true</default>
                <label>SR</label>
            </value>
            <value>
                <fullName>HG</fullName>
            </value>
            <value>
                <fullName>LL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>