force-app/main/default/objects/Campaign_Influence__c/fields/Campaign_isList__c.field-meta.xml
<CustomField>
    <fullName>Campaign_isList__c</fullName>
    <formula>Campaign__r.List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign: isList</label>
    <type>Checkbox</type>
</CustomField>