force-app/main/default/objects/Campaign_Influence__c/fields/Campaign_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Sub_Type__c</fullName>
    <formula>TEXT( Campaign__r.Sub_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Sub-Type</label>
    <type>Text</type>
</CustomField>