force-app/main/default/objects/Campaign_Influence__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <formula>text(Campaign__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Type</label>
    <type>Text</type>
</CustomField>