force-app/main/default/objects/Campaign_Influence__c/fields/Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won__c</fullName>
    <formula>Opportunity__r.Contract_Signed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won</label>
    <type>Checkbox</type>
</CustomField>