force-app/main/default/objects/Campaign_Influence__c/fields/Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Date__c</fullName>
    <formula>Opportunity__r.RecurSoft__Contract_Signed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won Date</label>
    <type>Date</type>
</CustomField>