force-app/main/default/objects/Campaign_Influence__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Influence</relationshipLabel>
    <relationshipName>Campaign_Influence</relationshipName>
    <type>Lookup</type>
</CustomField>