force-app/main/default/objects/Campaign_Influence__c/fields/CreatedFromId__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>CreatedFromId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>