force-app/main/default/objects/Campaign_Influence__c/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <formula>if(Opportunity__c = null, Lead__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Lead__r.Owner:User.LastName , Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Owner</label>
    <type>Text</type>
</CustomField>