force-app/main/default/objects/Campaign_Influence__c/fields/Current_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_Role__c</fullName>
    <formula>if(Opportunity__c = null,  Lead__r.Owner:User.Manager.FirstName &amp; &quot; &quot; &amp;  Lead__r.Owner:User.Manager.LastName , Opportunity__r.Owner.Manager.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.Manager.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Owner Role</label>
    <type>Text</type>
</CustomField>