force-app/main/default/objects/Campaign_Influence__c/fields/Days_Under_Contract__c.field-meta.xml
<CustomField>
    <fullName>Days_Under_Contract__c</fullName>
    <formula>Today() -  Opportunity__r.RecurSoft__Contract_Signed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Under Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>