force-app/main/default/objects/Campaign_Influence__c/fields/Demo_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Demo_Request_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Request Reason</label>
    <type>Checkbox</type>
</CustomField>