force-app/main/default/objects/Campaign_Influence__c/fields/Last_ROE_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_ROE_Date__c</fullName>
    <formula>if(  Lead__c != null , Lead__r.Last_ROE_Task_Date__c ,  Opportunity__r.Last_ROE_Task_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last ROE Date</label>
    <type>DateTime</type>
</CustomField>