force-app/main/default/objects/Campaign_Influence__c/fields/Last_ROE_Task_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_ROE_Task_Date__c</fullName>
    <formula>if( not(isblank(Opportunity__r.Last_ROE_Task_Date__c)), 
  Opportunity__r.Last_ROE_Task_Date__c, 
 if( not(isblank(Lead__r.Last_ROE_Task_Date__c)), 
  Lead__r.Last_ROE_Task_Date__c,
  Lead__r.SR_Date_Created__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last ROE Task Date</label>
    <type>DateTime</type>
</CustomField>