force-app/main/default/objects/Campaign_Influence__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Campaign Influence</relationshipLabel>
    <relationshipName>Campaign_Influence</relationshipName>
    <type>Lookup</type>
</CustomField>