force-app/main/default/objects/Campaign_Influence__c/fields/Lead_Re_warmed__c.field-meta.xml
<CustomField>
    <fullName>Lead_Re_warmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Re-warmed</label>
    <type>Checkbox</type>
</CustomField>