force-app/main/default/objects/Campaign_Influence__c/fields/Months_Under_Contract__c.field-meta.xml
<CustomField>
    <fullName>Months_Under_Contract__c</fullName>
    <formula>Days_Under_Contract__c /30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Under Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>