force-app/main/default/objects/Campaign_Influence__c/fields/New_Lead_Created__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Lead Created</label>
    <type>Checkbox</type>
</CustomField>