force-app/main/default/objects/Campaign_Influence__c/fields/Not_Signed_Up_Name__c.field-meta.xml
<CustomField>
    <fullName>Not_Signed_Up_Name__c</fullName>
    <label>Referral Partner Not Signed Up Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>