force-app/main/default/objects/Campaign_Influence__c/fields/Orphaned__c.field-meta.xml
<CustomField>
    <fullName>Orphaned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orphaned</label>
    <type>Checkbox</type>
</CustomField>