force-app/main/default/objects/Campaign_Influence__c/fields/Orphaned_Date__c.field-meta.xml
<CustomField>
    <fullName>Orphaned_Date__c</fullName>
    <label>Orphaned Date</label>
    <type>Date</type>
</CustomField>