force-app/main/default/objects/Campaign_Influence__c/fields/Referral_Partner_Payment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner_Payment_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Partner Payment Sent</label>
    <type>Checkbox</type>
</CustomField>