force-app/main/default/objects/Campaign_Influence__c/fields/Sales_Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qualified_Date__c</fullName>
    <description>Set by the sales rep clicking the Sales Qualified Lead button on a related Contact.</description>
    <label>Sales Qualified Date</label>
    <type>DateTime</type>
</CustomField>