force-app/main/default/objects/Campaign_Influence__c/fields/Send_to_ADRs__c.field-meta.xml
<CustomField>
    <fullName>Send_to_ADRs__c</fullName>
    <formula>if( Last_ROE_Date__c &lt; Campaign_Add_Date__c &amp;&amp; Campaign_Add_Date__c + 14 &lt; now() &amp;&amp;  Closed_Won__c = false , true , false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send to ADRs</label>
    <type>Checkbox</type>
</CustomField>