force-app/main/default/objects/Campaign_Influence__c/fields/Source_User__c.field-meta.xml
<CustomField>
    <fullName>Source_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Influences</relationshipName>
    <type>Lookup</type>
</CustomField>