force-app/main/default/objects/Campaign_Influence__c/fields/Source_User_Role_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_User_Role_Id__c</fullName>
    <label>Source User Role Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>