force-app/main/default/objects/Campaign_Influence__c/fields/Source_User_VP__c.field-meta.xml
<CustomField>
    <fullName>Source_User_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source User VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Influence_VP</relationshipName>
    <type>Lookup</type>
</CustomField>