force-app/main/default/objects/Campaign_Influence__c/fields/Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Sub_Vertical__c</fullName>
    <label>Sub-Vertical</label>
    <length>55</length>
    <type>Text</type>
</CustomField>