force-app/main/default/objects/Campaign_Influence__c/fields/Trial_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Completion_Date__c</fullName>
    <formula>if( or(ispickval( Opportunity__r.Account.RecurSoft__Status__c , &quot;Active&quot;),ispickval( Opportunity__r.Account.RecurSoft__Status__c , &quot;Pending Setup&quot;)), Opportunity__r.Trial_End_Date__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial Completion Date</label>
    <type>Date</type>
</CustomField>