force-app/main/default/objects/Campaign_Influence__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <length>55</length>
    <type>Text</type>
</CustomField>