force-app/main/default/objects/Campaign_Influence__c/validationRules/Block_CI_on_Closed_Opps.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_CI_on_Closed_Opps</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; 
Opportunity__r.IsClosed &amp;&amp;
NOT( $Permission.Add_CIs_to_Closed_Opps ) &amp;&amp;
IF(
				Opportunity__r.RecurSoft__Contract_Signed_Date__c &gt;= (TODAY()-14) &amp;&amp;
				($User.Username = &#39;debra@solutionreach.com&#39; ||
					$User.Username = &#39;jacquelyn@solutionreach.com&#39;),
				false,
				true
)</errorConditionFormula>
    <errorMessage>A Campaign Influence cannot be added to a closed Opportunity</errorMessage>
</ValidationRule>