force-app/main/default/objects/Campaign_Influence__c/listViews/Recent_Trade_Show.listView-meta.xml
<ListView>
    <fullName>Recent_Trade_Show</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Campaign_Add_Date__c</columns>
    <columns>New_Lead_Created__c</columns>
    <columns>Lead_Re_warmed__c</columns>
    <columns>Closed_Won__c</columns>
    <columns>Orphaned__c</columns>
    <columns>Associated_Rep__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>equals</operation>
        <value>PDA-09/2014-Fort Worth,TX</value>
    </filters>
    <label>Recent Trade Show</label>
</ListView>