force-app/main/default/objects/Campaign_Influence__c/listViews/Setter.listView-meta.xml
<ListView>
    <fullName>Setter</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Campaign_Add_Date__c</columns>
    <columns>New_Lead_Created__c</columns>
    <columns>Lead_Re_warmed__c</columns>
    <columns>Closed_Won__c</columns>
    <columns>Orphaned__c</columns>
    <columns>Associated_Rep__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>contains</operation>
        <value>ADR Set</value>
    </filters>
    <label>Setter</label>
</ListView>