force-app/main/default/objects/Campaign_Influence__c/listViews/Wasted_Days_List.listView-meta.xml
<ListView>
    <fullName>Wasted_Days_List</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>contains</operation>
        <value>Wasted,nash</value>
    </filters>
    <filters>
        <field>Campaign_Add_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Closed_Won__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Wasted Days List</label>
    <sharedTo>
        <role>VP_Outside_Sales</role>
    </sharedTo>
</ListView>